# EECE5554-Robot-Sensing-and-Navigation

./: README.md
Final_Project/: README.md  spot_multicam.launch  spot_rgbdodom.launch  test_velodyne.launch
LAB1/src/analysis_scripts/: stationary_analysis.py  walking_analysis.py
LAB1/src/custom_interfaces/: CMakeLists.txt  package.xml
LAB1/src/data/: stationary_data.json  walking_data.json
LAB1/src/data/stationary_data/: metadata.yaml  stationary_data_0.db3
LAB1/src/data/walking_data/: metadata.yaml  walking_data_0.db3
LAB1/src/gps_driver/: package.xml  setup.py
LAB1/src/gps_driver/gps_driver/: driver.py
LAB1/src/gps_driver/launch/: gps_launch.py
LAB3/analysis/: analysis.py  matlab plots.rar
LAB3/data/short_data/: metadata.yaml
LAB3/src/custom_interfaces/: CMakeLists.txt  package.xml
LAB3/src/imu_driver/: package.xml  setup.py
LAB3/src/imu_driver/imu_driver/: driver.py
LAB4/: readme.md
LAB4/analysis/: analysis.ipynb
LAB4/analysis/json_data/: gps_data_donut.json  gps_data_tour.json  imu_data_donut.json
LAB4/data/data_driving/: metadata.yaml
LAB4/data/data_going_in_circles/: data_going_in_circles_0.db3  metadata.yaml
LAB4/src/custom_interfaces/: CMakeLists.txt
LAB4/src/custom_interfaces/msg/: GPSmsg.msg  IMUmsg.msg
LAB4/src/gps_driver/gps_driver/: driver.py
LAB4/src/gps_driver/launch/: nav_launch.py
LAB4/src/imu_driver/imu_driver/: driver.py
LAB4/src/imu_driver/launch/: imu_launch.py
LAB5/harris/: harris.py
PA0/: text
PA1/: readme
PA1/src/pub_sub/: package.xml  setup.py
PA1/src/srv_cli/: package.xml  setup.py
(+4 files in other folders)
